# stella

./: .gitignore  CMakeLists.txt
src/: TypeCheck.cpp  ctest_maker.py
tests/ill-typed/: ill-typed-1.stella  ill-typed-2.stella
tests/well-typed/: well-typed-1.stella  well-typed-2.stella
